# TimerApp

./: .gitmodules  CMakeLists.txt  README.md  clock.cpp  clock.h  main.m.cpp  run.sh  timer.cpp  timer.h  timerdisplay.cpp  timerdisplay.h  util.cpp  util.h
ui/: colons.txt  numbers.txt
